# practice-code-c-cpp

./: README.md
basic/array/: arrayTest.cpp  arrayTest.h
basic/build_dynamic_lib/: main  main.cpp  makefile  run.sh
basic/build_static_lib/: main.cpp  makefile
basic/cmakeDemo/executable/: CMakeLists.txt
basic/cstring/: cstrTest.cpp  cstrTest.h  makefile
basic/pointer/: pointerTest.cpp  pointerTest.h
basic/ref/: refTest.cpp
basic/regex/: main.cpp  makefile
basic/regex2/: main.cpp  makefile
exception/throw_catch/: main.cpp
function/fnpointer/: testFnPoointer.cpp
function/inline/: testInline.cpp  testInline.h
linux_event/: README.md
linux_event/eventfd/: README.md  main.cpp  makefile
linux_event/libevent/: README.md
linux_io/: README.md
linux_io/1.blocking/: README.md
linux_io/5.zero_copy/: README.md
memory_manage/: articles.md
std_container/: 标准库关联容器.md  标准库顺序容器.md  模板算法.md
std_container/1.string/: stringTest.cpp  stringTest.h
std_container/2.vector/: vectorTest.cpp  vectorTest.h
std_container/3.bitset/: bitsetTest.cpp  bitsetTest.h
std_container/4.map/: testMap.cpp
std_container/5.template_alg/: main.cpp
std_io/fstream/: testFstream.cpp  testfile.txt  testfile2.txt
std_io/stringstream/: core.26401  testStringStream.cpp
template/basic/: 1.fn_template.h  2.class_template.h  3.not_type_template.h  4.friend_in_template.h  5.specialization_template.h  main.cpp
thread/async_future/: CMakeLists.txt  future_async.h  main.cpp  readme.md  wait_for_two_task.h
thread/atomic/: CMakeLists.txt  atomic_test.h  main.cpp
(+67 files in other folders)
